# descript

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: microsoft.yml  ubuntu.yml
descript/: CMakeLists.txt  descript.natvis
descript/include/descript/: alloc.hh  assembly.hh  compile_types.hh  compiler.hh  context.hh  database.hh  evaluate.hh  export.hh  expression_compiler.hh  graph_compiler.hh  hash.hh  key.hh  meta.hh  node.hh  runtime.hh  types.hh  uuid.hh  value.hh
descript/source/: alloc.cpp  array.hh  assembly.cpp  assembly_internal.hh  assert.hh  bit.hh  compiler.cpp  database.cpp  evaluate.cpp  event.hh  expression.cpp  expression.hh  expression_compiler.cpp  expression_compiler.hh  fnv.hh  graph_compiler.cpp  hash.cpp  index.hh  instance.hh  ops.hh  rel.hh  runtime.cpp  storage.hh  string.hh  utility.hh  uuid.cpp  value.cpp
descript/tests/: CMakeLists.txt  leak_alloc.hh  test_compiler.cpp  test_expression.cpp  test_expression.hh  test_runtime.cpp  test_uuid.cpp
extra/: CMakeLists.txt
extra/include/descript/: uuid.hh
extra/source/: uuid.cpp
extra/tests/: CMakeLists.txt  test_uuid.cpp
samples/: CMakeLists.txt  draw.hh  graph.cpp  graph.hh  main.cpp  schema.hh
